[tool.ruff]
line-length = 120

[tool.poetry]
name = "stat"
version = "0.1.0"
description = ""
authors = ["Ved Kothavade <ved@kothavade.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "^1.24.3"
scipy = "^1.10.1"
matplotlib = "^3.7.1"
streamlit = "^1.22.0"
watchdog = "^3.0.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.267"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
